--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -32,6 +32,7 @@
   border: 1px solid rgba(0, 0, 0, 0.32);
   border-radius: 4px;
   position: relative;
+  background: #f9fafb;
   margin-top: 20px;
 }
 .region_select select {
@@ -41,9 +42,11 @@
   top: 0;
   left: 0;
   border: none;
+  border-radius: 4px;
   padding: 10px 20px;
   outline: none;
   font-size: 20px;
+  background: #f9fafb;
 }
 .main_content form button {
   padding: 10px 20px;
@@ -58,12 +61,12 @@
   margin-top: 100px;
 }
 @media screen and (max-width: 1024px) {
-    .main {
-      flex-direction: column;
-      padding: 30px 30px;
-    }
-    .main_title p{
-      max-width: 100%;
-      font-size: 30px;
-    }
+  .main {
+    flex-direction: column;
+    padding: 30px 30px;
   }
+  .main_title p {
+    max-width: 100%;
+    font-size: 30px;
+  }
+}
