--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -23,6 +23,11 @@
   flex-direction: column;
   justify-content: center;
 }
+.main_content form label {
+  text-align: center;
+  font-size: 20px;
+  margin-top: 10px;
+}
 .region_select {
   width: 300px;
   height: 50px;
@@ -37,7 +42,7 @@
 }
 .region_select select {
   position: absolute;
-  right: 10px;
+  right: 0px;
   bottom: 0;
   top: 0;
   left: 0;
